...
                        app:layout_constraintGuide_percent="0.9"
                        android:orientation="vertical"/>

                <TextView
                        android:id="@+id/idLabel"
                        android:text="@string/form_employee_id"
                        app:layout_constraintTop_toTopOf="@+id/idEditText"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner1"
                        app:layout_constraintBottom_toBottomOf="@+id/idEditText"
                        style="@style/registration_text_label_style"/>

                <TextView
                        android:id="@+id/nameLabel"
                        android:text="@string/form_employee_name"
                        app:layout_constraintTop_toTopOf="@+id/nameEditText"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner1"
                        app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
                        style="@style/registration_text_label_style"/>

                <TextView
                        android:id="@+id/emailLabel"
                        android:text="@string/form_email"
                        app:layout_constraintTop_toTopOf="@+id/emailEditText"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner1"
                        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
                        style="@style/registration_text_label_style"/>

                <TextView
                        android:id="@+id/passwordLabel"
                        android:text="@string/form_password"
                        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner1"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
                        style="@style/registration_text_label_style"/>

                <TextView
                        android:id="@+id/securityLabel"
                        android:text="@string/form_security_code"
                        app:layout_constraintTop_toTopOf="@+id/employeeSecurityEditText"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner1"
                        app:layout_constraintBottom_toBottomOf="@+id/employeeSecurityEditText"
                        style="@style/registration_text_label_style"/>

                <TextView
                        android:id="@+id/rfidLabel"
...
