...
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                tools:listitem="@layout/setting_option_item"
                app:layout_constraintHorizontal_weight="5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnLeft"
                app:layout_constraintEnd_toStartOf="@+id/guidelineBegin"
                android:visibility="gone"
                tools:visibility="visible"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBegin"
...
                android:paddingEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintHorizontal_weight="13"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnRight"
                app:layout_constraintStart_toEndOf="@+id/guidelineBegin"
                android:visibility="gone"
                tools:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
...
                        app:layout_constraintGuide_percent="0.5"
                        android:orientation="vertical"/>

                <TextView
                        android:id="@+id/idleTimeLabel"
                        android:text="@string/idle_time"
                        app:layout_constraintTop_toTopOf="@+id/idleTimeEditText"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner2"
                        app:layout_constraintBottom_toBottomOf="@+id/idleTimeEditText"
                        style="@style/setting_text_label_style"/>

                <TextView
                        android:id="@+id/holdResultLabel"
...
                        app:layout_constraintBottom_toBottomOf="@+id/faceVerifyTimeEditText"
                        style="@style/setting_text_label_style"/>

                <TextView
                        android:id="@+id/appModeLabel"
                        android:text="@string/application_mode"
                        app:layout_constraintTop_toTopOf="@+id/appModeSpinner"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner2"
                        app:layout_constraintBottom_toBottomOf="@+id/appModeSpinner"
                        style="@style/setting_text_label_style"/>

                <TextView
                        android:id="@+id/checkInOutLabel"
                        android:text="@string/select_clock_in_out"
                        app:layout_constraintTop_toTopOf="@+id/checkInOutSpinner"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner2"
                        app:layout_constraintBottom_toBottomOf="@+id/checkInOutSpinner"
                        style="@style/setting_text_label_style"/>

                <TextView
                        android:id="@+id/humanLabel"
...
                        app:layout_constraintBottom_toBottomOf="@+id/fdrSwitch"
                        style="@style/setting_text_label_style"/>

                <TextView
                        android:id="@+id/screenLabel"
                        android:text="@string/screen_saver"
                        app:layout_constraintTop_toTopOf="@+id/screenSwitch"
                        app:layout_constraintEnd_toStartOf="@+id/guidelineInner2"
                        app:layout_constraintBottom_toBottomOf="@+id/screenSwitch"
                        style="@style/setting_text_label_style"/>

                <EditText
                        android:id="@+id/idleTimeEditText"
...
