...
            android:gravity="center"
            android:textSize="@dimen/state_title_size"
            tools:text="Dialog Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/messageText" />

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitleText"/>
...
