...
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_bg">

        <com.gorilla.attendance.ui.register.EmployeeRegForm
                android:id="@+id/employeeRegisterForm"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:layout="@layout/employee_register_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
...
