...
                    android:id="@+id/checkOutBtn"
                    android:text="@string/clock_check_out"
                    android:layout_marginTop="@dimen/fdr_title_margin"
                    android:layout_marginStart="@dimen/fdr_title_margin"
                    app:layout_constraintTop_toBottomOf="@+id/checkInBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/passBtn"
                    android:visibility="@{isShowEmployeeBtn ? View.VISIBLE : View.GONE}"
                    style="@style/clock_option_button_style"/>

            <Button
                    android:id="@+id/passBtn"
                    android:text="@string/clock_pass"
...
