...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.12"/>

        <ImageView
                android:id="@+id/imgEmployee"
                android:layout_width="@dimen/choose_icon_size"
                android:layout_height="@dimen/choose_icon_size"
                android:src="@mipmap/ic_employee"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="packed"
...
